# ros_main

./: .gitignore  5.23更新日志.md  analysis_architecture.md  analysis_hardcoded_issues.md  start_services.sh  tests.ipynb  架构分析.md  硬编码分析.md
devel/: .catkin  local_setup.fish  setup.sh
devel/lib/ar_tf_arm_5_pkg/: ar_tf_5_node
devel/lib/arm_control_pkg/: arm_control_node
devel/lib/auto_bkhome_pkg/: auto_bkhome_node
devel/lib/auto_charge_pkg/: auto_charge_node
devel/lib/auto_nav_goal_4_pkg/: auto_nav_4_node
devel/lib/auto_nav_goal_5_pkg/: auto_nav_5_node
devel/lib/nav_goal_pkg/: nav_goal_node
devel/lib/pkgconfig/: ar_tf_arm_5_pkg.pc  arm_control_pkg.pc  auto_bkhome_pkg.pc  auto_charge_pkg.pc  auto_nav_goal_4_pkg.pc  auto_nav_goal_5_pkg.pc  nav_goal_pkg.pc  romove_pkg.pc
devel/lib/romove_pkg/: romove_node
devel/share/ar_tf_arm_5_pkg/cmake/: ar_tf_arm_5_pkgConfig.cmake
devel/share/arm_control_pkg/cmake/: arm_control_pkgConfig.cmake
devel/share/auto_bkhome_pkg/cmake/: auto_bkhome_pkgConfig.cmake
devel/share/auto_charge_pkg/cmake/: auto_charge_pkgConfig.cmake
devel/share/auto_nav_goal_4_pkg/cmake/: auto_nav_goal_4_pkgConfig.cmake
devel/share/auto_nav_goal_5_pkg/cmake/: auto_nav_goal_5_pkgConfig.cmake
devel/share/nav_goal_pkg/cmake/: nav_goal_pkgConfig.cmake
devel/share/romove_pkg/cmake/: romove_pkgConfig.cmake
maps/: home.pgm  home.yaml
src/: auto_bkhome_pkg
src/nav_goal_pkg/: CMakeLists.txt  package.xml
src/nav_goal_pkg/src/: nav_goal.cpp
src/romove_pkg/src/: romove_node.cpp
src/state_machine_pkg/src/: state_machine.cpp
src_task_1/Grab_pkg/src/: Grab.cpp
src_task_1/auto_charge_pkg/src/: auto_charge.cpp
src_task_1/auto_nav_goal_4_pkg/src/: auto_nav_goal_4.cpp
src_task_1/auto_nav_goal_5_pkg/src/: auto_nav_goal_5.cpp
src_task_1/devel/: .catkin  local_setup.fish  setup.sh
src_task_1/remove_back_pkg/: CMakeLists.txt  package.xml
src_task_1/remove_back_pkg/src/: re_back.cpp
(+12 files in other folders)
